--- a/css/normalize.css
+++ b/css/normalize.css
@@ -41,6 +41,11 @@ h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
+picture{
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
 
 /* Grouping content
    ========================================================================== */
