--- a/css/esttilos.css
+++ b/css/esttilos.css
@@ -167,3 +167,73 @@ body{
   font-weight: 900;
   line-height: 1.5em;
 }
+.title-testimonials{
+  color: var(--Dark-grayish-blue);
+  text-align: center;
+  letter-spacing: 2px;
+}
+.card{
+  text-align: center;
+  margin-bottom: 50px;
+}
+/* .card--header{
+} */
+.card--img{
+  max-width: 25%;
+  border-radius: 50%;
+}
+.card--info{
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  color: var(--Very-dark-grayish-blue);
+}
+.card--name{
+  color: var(--Very-dark-desaturated-blue);
+  font-weight: 900;
+  font-size: 1.3rem;
+}
+
+.card--work{
+  color: var(--Dark-grayish-blue);
+}
+.images{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
+  gap: 0;
+}
+.grid-item-img{
+  max-width: 100%;
+}
+.footer{
+  height: 300px;
+  background-color: var(--Dark-moderate-cyan);
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.footer-logo{
+  display: block;
+  width: 150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer-menu{
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.footer--link{
+  text-decoration: none;
+  color: var(--Dark-desaturated-cyan);
+}
+.footer-social{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
