--- a/css/esttilos.css
+++ b/css/esttilos.css
@@ -334,7 +334,7 @@ body::-webkit-scrollbar-thumb{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 12%;
+    margin-top: 10%;
     margin-bottom: 12%;
   }
   .testimonials-container{
@@ -342,7 +342,13 @@ body::-webkit-scrollbar-thumb{
     justify-content: space-evenly;
     align-items: center;
   }
-  
+  .card--info{
+    margin-bottom: 50px;
+  }
+  .title-testimonials{
+    letter-spacing: 5px;
+    font-size: 2.5rem;
+  }
 }
 .images{
   display: grid;
