--- a/css/esttilos.css
+++ b/css/esttilos.css
@@ -239,6 +239,10 @@ body::-webkit-scrollbar-thumb{
     display:grid;
     grid-template-columns: repeat(2,1fr);
   }
+  .div .content-grid:first-child,
+  .div .content-grid:last-child{
+    height: 565px;
+  }
   .div .content-grid:first-child{
     margin-top: 0;
   }
