--- a/css/esttilos.css
+++ b/css/esttilos.css
@@ -36,7 +36,7 @@ body::-webkit-scrollbar-thumb{
   height: 300px;
   position: relative;
   background-image: 
-  url('/images/desktop/image-header.jpg') ;
+  url(/images/desktop/image-header.jpg) ;
   background-size: 150%;
   background-repeat: no-repeat;
   background-position: 60% 0;
