--- a/css/esttilos.css
+++ b/css/esttilos.css
@@ -39,10 +39,23 @@ body::-webkit-scrollbar-thumb{
   url("../images/desktop/image-header.jpg") ;
   background-size: 150%;
   background-repeat: no-repeat;
-  background-position: 60% 0;
+  background-position: 50% 0;
+}
+.header--arrow{
+  position: absolute;
+  width: 25px;
+  top: 60%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+@media screen and (min-width:768px) {
+  .header--arrow{
+    top: 70%;
+  }
 }
 @media screen and (min-width:768px) {
   .header{
+    height:450px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
@@ -57,6 +70,7 @@ body::-webkit-scrollbar-thumb{
   color: var(--White);
   font-size: 2.5rem;
   font-weight: 900;
+  text-align: center;
 }
 @media screen and (min-width:768px) {
   .header--title{
